- doc/status.txt: Small corrections to lists of implemented functions. (RFB)

2012-10-18
- bios/ide.c: Fixed and enabled support for IDE slave device. Contributed by
  Stephen Leary. (VRI)
- bios/ide.c bios/ide.h bios/machine.c include/config.h: Enabled the internal
  IDE driver by default. (VRI)

2012-10-26
- bios/bios.c bios/chardev.c bios/chardev.h bios/ikbd.c bios/ikbd.h
  bios/kprint.c bios/midi.c bios/midi.h bios/parport.c bios/parport.h
  bios/serport.c bios/serport.h bios/tosvars.h : Fix args passed to xconout
  vectors (regression introduced 2012-10-13). (RFB)

2012-10-27
- aes/gemsuper.c aes/crysbind.h: Fix overwrite of local AES arrays if
  originals are longer than expected. (RFB)
- aes/gemsuper.c: Fix warning msg introduced by previous update. (RFB)
- aes/gemfslib.c: Allow empty string in path passed to file selector. (RFB)

2012-11-06
- bios/bios.c bios/delay.c bios/delay.h bios/delayasm.S include/asm.h
  Makefile: Add calibrated delay loop. (RFB)
- bios/machine.c bios/machine.h: Rename SCC_PORTA_CTL to SCC_BASE for
  clarity. (RFB)

2012-11-08
- bios/serport.c bios/serport.h: Add Falcon serial I/O support (supports
  SCC chip on Falcon & TT). (RFB)

2012-11-10
- bios/bios.c bios/kprint.c include/config.h include/kprint.h: Add new
  debug option SCC_DEBUG_PRINT to route kprintf() to SCC (Falcon serial
  port). (RFB)

2012-11-15
- bios/startup.S include/asmdefs.h: Fix startup so that EmuTOS RAM works
  on real Falcon. (RFB)

2012-11-23
- bios/startup.S: Disable data & instruction caches at beginning of boot. (RFB)
- bios/startup.S include/asmdefs.h: Disable MMU at beginning of boot. (RFB)

2012-11-25
- bios/processor.h bios/processor.S bios/vectors.S include/asmdefs.h:
  Enable instruction cache on 68030. (RFB)
- bios/serport.c: Insert required delays for SCC chip access. (RFB)

2012-11-27
- bios/bios.c bios/machine.c bios/machine.h: Code cleanup: rename
  machine_init() to fill_cookie_jar(). (RFB)